content created and start layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
 
 <body>
 
-<section class="container">
+<div class="topnav">
+    <a href="https://www.versengezond.be/nl/info/over.html" target="_blank">Over Vers en Gezond</a>
+    <a href="https://www.versengezond.be/nl/info/hoe-werkt-het.html" target="_blank">Hoe werkt het</a>
+    <a href="https://www.versengezond.be/nl/recepten.html" target="_blank">Recepten</a>
+    <a class="active" href="https://www.versengezond.be/nl/producten2/producten.html" target="_blank">Bestellen</a>
+    <a href="#https://www.versengezond.be/nl/16-articles/140-hoe-werkt-het-2.html" target="_blank">Update Covid-19</a>
+</div>
+
+
+<section class="section-carousel">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -27,14 +36,21 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="image1.jpg" alt="Vers en gezond">
+                <p class="carousel-caption">Verse groenten & fruit aan huis geleverd
                 <br>
                 <button type="button" class="btn btn-success rounded">Klik hier!</button>
             </div>
             <div class="carousel-item">
                 <img src="image2.jpg" alt="Vers en gezond">
+                <p class="carousel-caption">Bekijk onze recepten en tips"
+                <br>
+                <button type="button" class="btn btn-success rounded">Laat je inspireren!</button>
             </div>
             <div class="carousel-item">
                 <img src="image3.jpg" alt="Vers en gezond">
+                <p class="carousel-caption">Ontdek elke woensdag de inhoud van de pakketten"
+                <br>
+                <button type="button" class="btn btn-success rounded">Schrijf je in!</button>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -48,8 +64,8 @@
     </div>
 </section>
 
-<section class="container">
-    <div class="Who">
+<section class="section-info">
+    <div class="col-who">
         <h2>Wie zijn we?</h2>
         <p>Vers en Gezond is een familiebedrijf uit Leest geleid door de familie Peeters, Marc Peeters, zijn vrouw Hilde
             en hun zonen Jeff en Bert.</p>
@@ -60,20 +76,22 @@
         <p>Zo kunnen we wekelijk een groot aanbod groenten, fruit en andere streekproducten aan huis leveren.</p>
     </div>
 
-    <div class="What">
+    <div class="col-what">
         <h2>Hoe werkt het?</h2>
-        <ol>
-            <ul>Kies je groenten- en/of fruitpakket</ul>
-            <ul>Voeg eventueel extra producten toe</ul>
-            <ul>Ontvang jouw producten op jouw gekozen dag</ul>
-            <ul>Kook en geniet!</ul>
+        <ul>
+            <lil>Kies je groenten- en/of fruitpakket</lil>
+            <li>Voeg eventueel extra producten toe</li>
+            <li>Ontvang jouw producten op jouw gekozen dag, zonder abonnement</li>
+            <li>Kook en geniet!</li>
+        </ul>
     </div>
 
-    <div class="Why">
+    <div class="col-why">
         <h2>Alle voordelen om lokaal te kopen</h2>
         <ol>
             <li>Je koopt verse producten</li>
-            <li>Je maakt een duurzame keuze: je eet wat de seizoenen brengen en je voedsel legt minder kilometers af.</li>
+            <li>Je maakt een duurzame keuze: je eet wat de seizoenen brengen en je voedsel legt minder kilometers af.
+            </li>
             <li>Je betaalt een eerlijke prijs rechtstreeks aan de boer</li>
             <li>Je weet wie je product heeft geproduceerd en waar het vandaan komt.</li>
         </ol>
@@ -81,10 +99,10 @@
 </section>
 
 <footer class="container">
-    <p class="float-left">© Copyright 2020 - Vers en Gezond;</p>
+    <p class="float-left">© Copyright 2020 - Vers en Gezond</p>
     <a href="mailto:info@versengezond.be" class="float-left"></a>
-    <a href="https://www.versengezond.be/nl/voorwaarden.html" class="float-left">Voorwaarden &nbsp;</a>
-    <a href="#" class="float-left">Privacy policy;</a>
+    <a href="https://www.versengezond.be/nl/voorwaarden.html" class="float-left">Voorwaarden</a>
+    <a href="#" class="float-left">Privacy policy</a>
     <a href="#" class="float-right">Terug naar boven</a>
 </footer>
 
