--- a/index.html
+++ b/index.html
@@ -15,95 +15,93 @@
     <title>Welkom bij Vers en Gezond!</title>
 </head>
 
+<nav class="navbar fixed-top">
+    <a class="nav-link active" href="https://www.versengezond.be/nl/info/over.html" target="_blank">Over Vers en Gezond</a>
+    <a class="nav-link active" href="#https://www.versengezond.be/nl/info/hoe-werkt-het.html" target="_blank">Hoe werkt het</a>
+    <a class="nav-link active" href="https://www.versengezond.be/nl/recepten.html"target="_blank">Recepten</a>
+    <a class="nav-link active" href="https://www.versengezond.be/nl/producten2/producten.html" target="_blank">Bestellen</a>
+    <a class="nav-link active" href="https://www.versengezond.be/nl/16-articles/140-hoe-werkt-het-2.html" target="_blank">Update Covid-19</a>
+
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="text" placeholder="Hulp nodig?">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Zoeken</button>
+    </form>
+</nav>
+
 <body>
 
-<div class="topnav">
-    <a href="https://www.versengezond.be/nl/info/over.html" target="_blank">Over Vers en Gezond</a>
-    <a href="https://www.versengezond.be/nl/info/hoe-werkt-het.html" target="_blank">Hoe werkt het</a>
-    <a href="https://www.versengezond.be/nl/recepten.html" target="_blank">Recepten</a>
-    <a class="active" href="https://www.versengezond.be/nl/producten2/producten.html" target="_blank">Bestellen</a>
-    <a href="#https://www.versengezond.be/nl/16-articles/140-hoe-werkt-het-2.html" target="_blank">Update Covid-19</a>
-</div>
-
-
 <section class="section-carousel">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="image1.jpg" alt="Vers en gezond">
-                <p class="carousel-caption">Verse groenten & fruit aan huis geleverd
-                <br>
-                <button type="button" class="btn btn-success rounded">Klik hier!</button>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="image2.jpg" alt="Vers en gezond">
+                    <p class="carousel-caption">Bekijk onze recepten en tips
+                        <br>
+                        <button type="button" class="btn btn-success rounded">Laat je inspireren!</button>
+                </div>
+                <div class="carousel-item">
+                    <img src="image3.jpg" alt="Vers en gezond">
+                    <p class="carousel-caption">Ontdek elke woensdag de inhoud van de pakketten
+                        <br>
+                        <button type="button" class="btn btn-success rounded">Schrijf je in!</button>
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="image2.jpg" alt="Vers en gezond">
-                <p class="carousel-caption">Bekijk onze recepten en tips"
-                <br>
-                <button type="button" class="btn btn-success rounded">Laat je inspireren!</button>
-            </div>
-            <div class="carousel-item">
-                <img src="image3.jpg" alt="Vers en gezond">
-                <p class="carousel-caption">Ontdek elke woensdag de inhoud van de pakketten"
-                <br>
-                <button type="button" class="btn btn-success rounded">Schrijf je in!</button>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div></div>
 </section>
 
-<section class="section-info">
-    <div class="col-who">
-        <h2>Wie zijn we?</h2>
-        <p>Vers en Gezond is een familiebedrijf uit Leest geleid door de familie Peeters, Marc Peeters, zijn vrouw Hilde
-            en hun zonen Jeff en Bert.</p>
-        </p>Onze familie kweekt meer dan 60 soorten groenten uit volle grond van de beste kwaliteit. De zandgrond van
-        Leest aan de kronkelende Molenbeek leent zich perfect voor het kweken van smaakvolle seizoensgroenten. Het
-        assortiment
-        van onze familie wordt aangevuld met dat van collega-landbouwers uit de streek.</p>
-        <p>Zo kunnen we wekelijk een groot aanbod groenten, fruit en andere streekproducten aan huis leveren.</p>
-    </div>
+<section class="container">
+    <div class="row mb-4">
+        <div class="col-4">
+                <h2>Wie zijn we?</h2>
+                <p>Vers en Gezond is een familiebedrijf uit Leest geleid door de familie Peeters, Marc Peeters, zijn
+                    vrouw Hilde
+                    en hun zonen Jeff en Bert.</p>
+                </p>Onze familie kweekt meer dan 60 soorten groenten uit volle grond van de beste kwaliteit. De
+                zandgrond van
+                Leest aan de kronkelende Molenbeek leent zich perfect voor het kweken van smaakvolle seizoensgroenten.
+                Het
+                assortiment
+                van onze familie wordt aangevuld met dat van collega-landbouwers uit de streek.</p>
+                <p>Zo kunnen we wekelijk een groot aanbod groenten, fruit en andere streekproducten aan huis
+                    leveren.</p>
+            </div>
 
-    <div class="col-what">
-        <h2>Hoe werkt het?</h2>
-        <ul>
-            <lil>Kies je groenten- en/of fruitpakket</lil>
-            <li>Voeg eventueel extra producten toe</li>
-            <li>Ontvang jouw producten op jouw gekozen dag, zonder abonnement</li>
-            <li>Kook en geniet!</li>
-        </ul>
-    </div>
+            <div class="col-4">
+                <h2>Hoe werkt het?</h2>
+                <ul>
+                    <li>Kies je groenten- en/of fruitpakket</li>
+                    <li>Voeg eventueel extra producten toe</li>
+                    <li>Ontvang jouw producten op jouw gekozen dag, zonder abonnement</li>
+                    <li>Kook en geniet!</li>
+                </ul>
+            </div>
 
-    <div class="col-why">
-        <h2>Alle voordelen om lokaal te kopen</h2>
-        <ol>
-            <li>Je koopt verse producten</li>
-            <li>Je maakt een duurzame keuze: je eet wat de seizoenen brengen en je voedsel legt minder kilometers af.
-            </li>
-            <li>Je betaalt een eerlijke prijs rechtstreeks aan de boer</li>
-            <li>Je weet wie je product heeft geproduceerd en waar het vandaan komt.</li>
-        </ol>
-    </div>
+                <div class="col-4">
+                <h2>Alle voordelen om lokaal te kopen</h2>
+                <ol>
+                    <li>Je koopt verse producten</li>
+                    <li>Je maakt een duurzame keuze: je eet wat de seizoenen brengen en je voedsel legt minder
+                        kilometers af.
+                    </li>
+                    <li>Je betaalt een eerlijke prijs rechtstreeks aan de boer</li>
+                    <li>Je weet wie je product heeft geproduceerd en waar het vandaan komt.</li>
+                </ol>
+                </div></div>
 </section>
 
-<footer class="container">
-    <p class="float-left">© Copyright 2020 - Vers en Gezond</p>
-    <a href="mailto:info@versengezond.be" class="float-left"></a>
-    <a href="https://www.versengezond.be/nl/voorwaarden.html" class="float-left">Voorwaarden</a>
-    <a href="#" class="float-left">Privacy policy</a>
-    <a href="#" class="float-right">Terug naar boven</a>
+<footer>
+    <p> © Copyright 2020 - Vers en Gezond</p>
+    <a href="#">Terug naar boven</a>
 </footer>
 
 <!-- Optional JavaScript -->
